--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
     "framer-motion": "^11.18.2",
     "jsonrepair": "^3.12.0",
     "lucide-react": "^0.323.0",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "next-swagger-doc": "^0.4.1",
     "openai": "^4.28.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-flow-renderer": "^10.3.17",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.11.4",
+    "styled-jsx": "^5.1.1",
     "swagger-ui-react": "^5.22.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
@@ -48,13 +49,13 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/swagger-ui-react": "^5.18.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
