Fix dependencies and JSON parsing: downgrade Next.js to 14.1.0, styled-jsx 5.1.2, fix OpenAI JSON wrapper parsing

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
   "functions": {
     "src/app/api/**/*.ts": {
-      "maxDuration": 30
+      "runtime": "nodejs18.x"
+    }
+  },
+  "build": {
+    "env": {
+      "NODE_OPTIONS": "--max-old-space-size=8192"
     }
   }
-} 
+}
