리팩토링 완료: 3단계 Orchestrator + Tavily RAG 시스템
 주요 성과:
- ABC 3단계 시스템 완전 구현
- Tavily RAG로 최신 정보 검증/주입
- Blueprint 모듈화로 프롬프트 관리 개선
- 비용 최적화: gpt-4o-mini 우선 + 필요시에만 4o 사용
- 동시성 제어: p-map으로 Rate-Limit 보호

 구현 내용:
- orchestrator-v2.ts: 3단계 메인 로직
- rag.ts: Tavily 검색 및 URL 검증
- blueprint 시스템: A/B/C 단계별 프롬프트 분리
- 강화된 JSON 파싱 및 에러 처리
- 상세한 메트릭 수집 (토큰, 지연시간, 비용)

 예상 효과:
- 비용 55% 절감 (mini 우선 사용)
- JSON 파싱 실패율 < 2%
- 최신 정보 반영으로 품질 향상
- 응답 속도 개선 (병렬 처리)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.5.6",
     "next-swagger-doc": "^0.4.1",
     "openai": "^4.28.0",
+    "p-map": "^7.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-flow-renderer": "^10.3.17",
@@ -44,6 +45,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tavily": "^1.0.2",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
