Tavily SDK 패키지 수정 - Vercel 빌드 에러 해결
 수정 내용:
- @tavily/sdk  @tavily/core로 패키지 변경
- import 구문 수정: TavilyClient  tavily 함수
- API 호출 방식 수정: 올바른 파라미터명 사용
- package-lock.json 업데이트

 Vercel 배포 준비 완료!

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tavily": "^1.0.2",
+    "@tavily/core": "^0.5.10",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
